syntax = "proto3";

option go_package = "./;pb";

message OnlinePushMessageTransfer {
  uint64 fromUin = 1;
  uint64 toUin = 2;
  uint32 messageType = 3;
  uint32 messageSubtype = 4;
  uint32 messageSeq = 5;
  uint64 messageUid = 6;
  uint32 messageTime = 7;
  uint32 realMessageTime = 8;
  string nickName = 9;
  bytes messageData = 10;
  uint32 serverIp = 11;
}
